glove word embedding for word-level models

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ __pycache__/
 
 Thumbs.db
 
-qa_system_web/uploads
-qa_system/very_large_data
+chatbot_train/uploads
+chatbot_train/very_large_data
 
 # Distribution / packaging
 .Python
