--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ gevent
 keras
 numpy
 nltk
+scikit-learn
 h5py
 pillow
 https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.11.0-cp27-none-linux_x86_64.whl
